[package]
name = "jrutz-firstapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
mustache = "0.9.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.197"
shuttle-axum = "0.42.0"
shuttle-runtime = "0.42.0"
shuttle-shared-db = { version = "0.42.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.28.2", features = ["full"] }
